Fully responsive made  Ohi

--- a/Index/css1/main-style.css
+++ b/Index/css1/main-style.css
@@ -1482,7 +1482,7 @@ section[data-font="raleway"] textarea {
   }
   .tabs-header {
     overflow-x: visible;
-    margin-left: 20px;
+    margin-left: 0;
     position: relative;
     display: inline-block;
     vertical-align: middle;
