--- a/Index/css1/main-style.css
+++ b/Index/css1/main-style.css
@@ -514,33 +514,33 @@ svg {
 [data-color="blue"] .btn-default-grad-purple-fill:hover {
   background-image: linear-gradient(
     to right,
-    #1366b9,
+    #1C25AB,
     #1f2ac2 40%,
     #1f2ac2 40%,
-    #1366b9
+    #1C25AB
   );
 }
 [data-color="blue"] .bg-purple,
 [data-color="blue"] .btn-default-purple-fill {
-  background-color: #1366b9 !important;
+  background-color: #1C25AB !important;
 }
 [data-color="blue"] .c-pink,
 [data-color="blue"] .c-purple {
   color: #fff !important;
 }
 [data-color="blue"] .sec-grad-white-to-purple {
-  background: linear-gradient(90deg, #fff 70%, #1366b9 0) !important;
+  background: linear-gradient(90deg, #fff 70%, #1C25AB 0) !important;
 }
 [data-color="blue"] .btn-default-purple {
-  color: #1366b9;
-  border: 1px solid #1366b9;
+  color: #1C25AB;
+  border: 1px solid #1C25AB;
 }
 [data-color="blue"] .btn-default-purple:hover,
 [data-color="blue"] .wpc-vps-info .price-wrap .title {
-  background-color: #1366b9;
+  background-color: #1C25AB;
 }
 [data-color="blue"] .pricing .table .title {
-  color: #1366b9;
+  color: #1C25AB;
 }
 
 /* @@ Style for themecolor : green */
@@ -634,10 +634,10 @@ svg {
 [data-color="pink"] .btn-default-grad-purple-fill:hover {
   background-image: linear-gradient(
     to right,
-    #da4d8e,
+    #EB5E7D,
     #ee5586 40%,
     #ee5586 40%,
-    #da4d8e
+    #EB5E7D
   );
 }
 [data-color="pink"] .tabs.offers-tabs .tabs-header .active {
@@ -646,25 +646,25 @@ svg {
 }
 [data-color="pink"] .bg-purple,
 [data-color="pink"] .btn-default-purple-fill {
-  background-color: #da4d8e !important;
+  background-color: #EB5E7D !important;
 }
 [data-color="pink"] .c-pink,
 [data-color="pink"] .c-purple {
   color: #fff !important;
 }
 [data-color="pink"] .btn-default-purple {
-  color: #da4d8e;
-  border: 1px solid #da4d8e;
+  color: #EB5E7D;
+  border: 1px solid #EB5E7D;
 }
 [data-color="pink"] .btn-default-purple:hover {
-  background-color: #da4d8e;
+  background-color: #EB5E7D;
 }
 [data-color="pink"] .pricing .wrapper .title,
 [data-color="pink"] .slick #slider .plan-container .title {
   color: #ee5586;
 }
 [data-color="pink"] .pricing .table .title {
-  color: #da4d8e;
+  color: #EB5E7D;
 }
 
 /* @@ Style for themecolor : red */
@@ -761,10 +761,10 @@ svg {
 [data-color="orange"] .btn-default-grad-purple-fill:hover {
   background-image: linear-gradient(
     to right,
-    #c46607,
+    #e16f00,
     #ee7600 40%,
     #ee7600 40%,
-    #c46607
+    #e16f00
   );
 }
 [data-color="orange"] .tabs.offers-tabs .tabs-header .active {
@@ -773,22 +773,22 @@ svg {
 }
 [data-color="orange"] .pricing .table .title,
 [data-color="orange"] .pricing .wrapper .title {
-  color: #c46607;
+  color: #e16f00;
 }
 [data-color="orange"] .bg-purple,
 [data-color="orange"] .btn-default-purple-fill {
-  background-color: #c46607 !important;
+  background-color: #e16f00 !important;
 }
 [data-color="orange"] .c-pink,
 [data-color="orange"] .c-purple {
   color: #fff !important;
 }
 [data-color="orange"] .btn-default-purple {
-  color: #c46607;
-  border: 1px solid #c46607;
+  color: #e16f00;
+  border: 1px solid #e16f00;
 }
 [data-color="orange"] .btn-default-purple:hover {
-  background-color: #c46607;
+  background-color: #e16f00;
 }
 
 /* @@ Style for themecolor : purple */
@@ -822,10 +822,10 @@ svg {
 [data-color="purple"] .btn-default-grad-purple-fill:hover {
   background-image: linear-gradient(
     to right,
-    #710e7e,
+    #821391,
     #9b1aac 40%,
     #9b1aac 40%,
-    #710e7e
+    #821391
   );
 }
 [data-color="purple"] .tabs.offers-tabs .tabs-header .active {
@@ -839,7 +839,7 @@ svg {
 }
 [data-color="purple"] .bg-purple,
 [data-color="purple"] .btn-default-purple-fill {
-  background-color: #710e7e !important;
+  background-color: #821391 !important;
 }
 
 [data-color="purple"] .c-pink,
@@ -847,11 +847,11 @@ svg {
   color: #fff !important;
 }
 [data-color="purple"] .btn-default-purple {
-  color: #710e7e;
-  border: 1px solid #710e7e;
+  color: #821391;
+  border: 1px solid #821391;
 }
 [data-color="purple"] .btn-default-purple:hover {
-  background-color: #710e7e;
+  background-color: #821391;
 }
 
 /* @@ Style for themecolor : teal */
@@ -919,41 +919,41 @@ svg {
 
 [data-color="cyan"] .c-rdb,
 [data-color="cyan"] .tabs.offers-tabs .tabs-header .active:hover {
-  color: #4dc9c9 !important;
+  color: #40a8a8 !important;
 }
 [data-color="cyan"] .bg-pink,
 [data-color="cyan"] .btn-default-pink-fill,
 [data-color="cyan"]
   .tabs-header
   .btn-secondary:not(:disabled):not(.disabled).active {
-  background-color: #4dc9c9 !important;
+  background-color: #40a8a8 !important;
 }
 [data-color="cyan"] .btn-default-pink:hover,
 [data-color="cyan"] .pricing .list-info {
-  background-color: #4dc9c9;
+  background-color: #40a8a8;
 }
 [data-color="cyan"] ::selection {
-  background: #4dc9c9;
+  background: #40a8a8;
 }
 [data-color="cyan"] .slick #slider .plan-container .title {
-  color: #4dc9c9;
+  color: #40a8a8;
 }
 [data-color="cyan"] .btn-default-pink {
-  color: #4dc9c9;
-  border: 1px solid #4dc9c9;
+  color: #40a8a8;
+  border: 1px solid #40a8a8;
 }
 [data-color="cyan"] .btn-default-grad-purple-fill,
 [data-color="cyan"] .btn-default-grad-purple-fill:hover {
   background-image: linear-gradient(
     to right,
     #40a8a8,
-    #4dc9c9 40%,
-    #4dc9c9 40%,
+    #40a8a8 40%,
+    #40a8a8 40%,
     #40a8a8
   );
 }
 [data-color="cyan"] .tabs.offers-tabs .tabs-header .active {
-  border-left: 3px solid #4dc9c9 !important;
+  border-left: 3px solid #40a8a8 !important;
   color: #40a8a8 !important;
 }
 [data-color="cyan"] .pricing .table .title,
@@ -1007,10 +1007,10 @@ svg {
 [data-color="brown"] .btn-default-grad-purple-fill:hover {
   background-image: linear-gradient(
     to right,
-    #69320a,
+    #7a3604,
     #8b3f08 40%,
     #8b3f08 40%,
-    #69320a
+    #7a3604
   );
 }
 [data-color="brown"] .tabs.offers-tabs .tabs-header .active {
@@ -1023,18 +1023,18 @@ svg {
 }
 [data-color="brown"] .bg-purple,
 [data-color="brown"] .btn-default-purple-fill {
-  background-color: #69320a !important;
+  background-color: #7a3604 !important;
 }
 [data-color="brown"] .c-pink,
 [data-color="brown"] .c-purple {
   color: #fff !important;
 }
 [data-color="brown"] .btn-default-purple {
-  color: #69320a;
-  border: 1px solid #69320a;
+  color: #7a3604;
+  border: 1px solid #7a3604;
 }
 [data-color="brown"] .btn-default-purple:hover {
-  background-color: #69320a;
+  background-color: #7a3604;
 }
 
 /* @@ Style for backgroundcolor */
@@ -1052,7 +1052,7 @@ svg {
 #radioplans[data-backgroundcolor="pink-bg"],
 [data-backgroundcolor="pink-bg"] .slick-list .draggable,
 [data-backgroundcolor="pink-bg"] .slick-list .slick-track {
-  background-color: #f3d4e3 !important;
+  background-color: #fff5fa !important;
 }
 #radioplans[data-backgroundcolor="blue-bg"],
 [data-backgroundcolor="blue-bg"] .slick-list .draggable,
@@ -1067,12 +1067,12 @@ svg {
 #radioplans[data-backgroundcolor="purple-bg"],
 [data-backgroundcolor="purple-bg"] .slick-list .draggable,
 [data-backgroundcolor="purple-bg"] .slick-list .slick-track {
-  background-color: #e6dcd5 !important;
+  background-color: #fbf5ffb8 !important;
 }
 #radioplans[data-backgroundcolor="orange-bg"],
 [data-backgroundcolor="orange-bg"] .slick-list .draggable,
 [data-backgroundcolor="orange-bg"] .slick-list .slick-track {
-  background-color: #fceee4 !important;
+  background-color: #fff7f1 !important;
 }
 #radioplans[data-backgroundcolor="teal-bg"],
 [data-backgroundcolor="teal-bg"] .slick-list .draggable,
@@ -1082,7 +1082,7 @@ svg {
 #radioplans[data-backgroundcolor="cyan-bg"],
 [data-backgroundcolor="cyan-bg"] .slick-list .draggable,
 [data-backgroundcolor="cyan-bg"] .slick-list .slick-track {
-  background-color: #ebebeb !important;
+  background-color: #f2ffffc7 !important;
 }
 #radioplans[data-backgroundcolor="brown-bg"],
 [data-backgroundcolor="brown-bg"] .slick-list .draggable,
