--- a/New Index-6/new-css6/new-index6.css
+++ b/New Index-6/new-css6/new-index6.css
@@ -1,5 +1,5 @@
 .bg-pink,
-.bg-purple{
+.bg-purple {
   right: 0;
   bottom: 0;
   width: 100%;
@@ -20,7 +20,7 @@ section {
   position: relative;
   left: 10%;
 }
-.anchor-slick-header:hover{
+.anchor-slick-header:hover {
   color: #000000b7;
 }
 .stockOut {
@@ -39,7 +39,7 @@ a {
 .section-heading {
   font-weight: 700 !important;
 }
-.sec-normal{
+.sec-normal {
   position: relative;
   padding: 35px 0;
   z-index: 0;
@@ -104,7 +104,6 @@ a.plans.badge.feat:hover {
   font-size: 25px;
   font-weight: 800;
   text-align: center;
-
 }
 .c-pink-top {
   text-align: center;
@@ -117,14 +116,14 @@ a.plans.badge.feat:hover {
   font-style: italic;
   font-size: 16px;
   font-weight: 700;
-  color: #000 ;
+  color: #000;
 }
 .c-pink-bottom {
   text-align: center;
   font-size: 16px;
   font-weight: 500;
 }
-.c-pink-btn{
+.c-pink-btn {
   text-align: center;
   position: relative;
 }
@@ -178,15 +177,14 @@ a.plans.badge.feat:hover {
   color: #fff !important;
   border: none;
 }
-.btn-default-yellow-fill{
+.btn-default-yellow-fill {
   background-color: #fdd700 !important;
   border-color: #fdd700 !important;
 }
 .btn-default-fill,
 .btn-default-pink-fill:hover,
 .btn-default-purple-fill:hover,
-.btn-default-gray-fill:hover
-.btn-default-yellow-fill:hover {
+.btn-default-gray-fill:hover .btn-default-yellow-fill:hover {
   background-color: #4c4a4a !important;
   color: #fff !important;
   border: none;
@@ -290,13 +288,16 @@ a.plans.badge.feat:hover {
 .tabs.offers-tabs .tabs-header div {
   margin-top: 15px;
 }
-#top-content1, #list-info1{
-    background-color: #fff !important;
-}
-#top-content2, #list-info2{
+#top-content1,
+#list-info1 {
   background-color: #fff !important;
 }
-#top-content3, #list-info3{
+#top-content2,
+#list-info2 {
+  background-color: #fff !important;
+}
+#top-content3,
+#list-info3 {
   background-color: #fff !important;
 }
 .pricing .wrapper {
@@ -371,18 +372,18 @@ a.plans.badge.feat:hover {
   float: left;
   padding: 5px 0;
 }
-.upper-top-content{
+.upper-top-content {
   padding: 15px 10px 0px;
 }
-.mid-content{
+.mid-content {
   text-align: center;
 }
-.title{
+.title {
   color: white !important;
   margin-top: 10px;
 }
 .pricing .wrapper .top-content {
-  padding:10px 20px;
+  padding: 10px 20px;
 }
 .pricing.special .list-info li {
   padding: 10px 0;
@@ -512,7 +513,7 @@ svg {
 [data-color="black"] .slick #slider .plan-container .price sup,
 [data-color="black"] .slick #slider .plan-container .list-info li,
 [data-color="black"] .slick #slider .plan-container .wrapper .list-info i,
-[data-color="black"] .slick #slider .plan-container .title{
+[data-color="black"] .slick #slider .plan-container .title {
   color: #1b1b1a !important;
 }
 
@@ -565,7 +566,7 @@ svg {
 [data-color="cyan"] .slick #slider .plan-container .price sup,
 [data-color="cyan"] .slick #slider .plan-container .list-info li,
 [data-color="cyan"] .slick #slider .plan-container .wrapper .list-info i,
-[data-color="cyan"] .slick #slider .plan-container .title{
+[data-color="cyan"] .slick #slider .plan-container .title {
   color: #387979 !important;
 }
 
@@ -618,7 +619,7 @@ svg {
 [data-color="brown"] .slick #slider .plan-container .price sup,
 [data-color="brown"] .slick #slider .plan-container .list-info li,
 [data-color="brown"] .slick #slider .plan-container .wrapper .list-info i,
-[data-color="brown"] .slick #slider .plan-container .title{
+[data-color="brown"] .slick #slider .plan-container .title {
   color: #582704 !important;
 }
 
@@ -648,7 +649,6 @@ svg {
   background-color: #582704;
 }
 
-
 /* @@ Style for themecolor : teal */
 
 [data-color="teal"] .bg-pink,
@@ -672,7 +672,7 @@ svg {
 [data-color="teal"] .slick #slider .plan-container .price sup,
 [data-color="teal"] .slick #slider .plan-container .list-info li,
 [data-color="teal"] .slick #slider .plan-container .wrapper .list-info i,
-[data-color="teal"] .slick #slider .plan-container .title{
+[data-color="teal"] .slick #slider .plan-container .title {
   color: #035757 !important;
 }
 
@@ -702,7 +702,6 @@ svg {
   background-color: #035757;
 }
 
-
 /* @@ Style for themecolor : pink */
 
 [data-color="pink"] .bg-pink,
@@ -726,7 +725,7 @@ svg {
 [data-color="pink"] .slick #slider .plan-container .price sup,
 [data-color="pink"] .slick #slider .plan-container .list-info li,
 [data-color="pink"] .slick #slider .plan-container .wrapper .list-info i,
-[data-color="pink"] .slick #slider .plan-container .title{
+[data-color="pink"] .slick #slider .plan-container .title {
   color: #ee5586 !important;
 }
 
@@ -779,7 +778,7 @@ svg {
 [data-color="blue"] .slick #slider .plan-container .price sup,
 [data-color="blue"] .slick #slider .plan-container .list-info li,
 [data-color="blue"] .slick #slider .plan-container .wrapper .list-info i,
-[data-color="blue"] .slick #slider .plan-container .title{
+[data-color="blue"] .slick #slider .plan-container .title {
   color: #1f2ac2 !important;
 }
 
@@ -832,7 +831,7 @@ svg {
 [data-color="green"] .slick #slider .plan-container .price sup,
 [data-color="green"] .slick #slider .plan-container .list-info li,
 [data-color="green"] .slick #slider .plan-container .wrapper .list-info i,
-[data-color="green"] .slick #slider .plan-container .title{
+[data-color="green"] .slick #slider .plan-container .title {
   color: #008000 !important;
 }
 
@@ -885,7 +884,7 @@ svg {
 [data-color="red"] .slick #slider .plan-container .price sup,
 [data-color="red"] .slick #slider .plan-container .list-info li,
 [data-color="red"] .slick #slider .plan-container .wrapper .list-info i,
-[data-color="red"] .slick #slider .plan-container .title{
+[data-color="red"] .slick #slider .plan-container .title {
   color: #e62214 !important;
 }
 
@@ -938,7 +937,7 @@ svg {
 [data-color="orange"] .slick #slider .plan-container .price sup,
 [data-color="orange"] .slick #slider .plan-container .list-info li,
 [data-color="orange"] .slick #slider .plan-container .wrapper .list-info i,
-[data-color="orange"] .slick #slider .plan-container .title{
+[data-color="orange"] .slick #slider .plan-container .title {
   color: #ff5f01 !important;
 }
 
@@ -968,7 +967,6 @@ svg {
   background-color: #ff5f01;
 }
 
-
 /* @@ Style for themecolor : purple */
 
 [data-color="purple"] .bg-pink,
@@ -992,7 +990,7 @@ svg {
 [data-color="purple"] .slick #slider .plan-container .price sup,
 [data-color="purple"] .slick #slider .plan-container .list-info li,
 [data-color="purple"] .slick #slider .plan-container .wrapper .list-info i,
-[data-color="purple"] .slick #slider .plan-container .title{
+[data-color="purple"] .slick #slider .plan-container .title {
   color: #9b1aac !important;
 }
 
@@ -1024,34 +1022,34 @@ svg {
 
 /* @@ Style for All backgroundcolor */
 
-#radioplans[data-backgroundcolor="black-bg"]{
+#radioplans[data-backgroundcolor="black-bg"] {
   background-color: #484747 !important;
 }
-#radioplans[data-backgroundcolor="brown-bg"]{
+#radioplans[data-backgroundcolor="brown-bg"] {
   background-color: #913f04 !important;
 }
-#radioplans[data-backgroundcolor="cyan-bg"]{
+#radioplans[data-backgroundcolor="cyan-bg"] {
   background-color: #40a8a8 !important;
 }
-#radioplans[data-backgroundcolor="teal-bg"]{
+#radioplans[data-backgroundcolor="teal-bg"] {
   background-color: #036969 !important;
 }
-#radioplans[data-backgroundcolor="pink-bg"]{
+#radioplans[data-backgroundcolor="pink-bg"] {
   background-color: #d95c84 !important;
 }
-#radioplans[data-backgroundcolor="green-bg"]{
+#radioplans[data-backgroundcolor="green-bg"] {
   background-color: #065e06 !important;
 }
-#radioplans[data-backgroundcolor="blue-bg"]{
+#radioplans[data-backgroundcolor="blue-bg"] {
   background-color: #1d27b1 !important;
 }
-#radioplans[data-backgroundcolor="red-bg"]{
+#radioplans[data-backgroundcolor="red-bg"] {
   background-color: #a12820 !important;
 }
-#radioplans[data-backgroundcolor="purple-bg"]{
+#radioplans[data-backgroundcolor="purple-bg"] {
   background-color: #6a1e74 !important;
 }
-#radioplans[data-backgroundcolor="orange-bg"]{
+#radioplans[data-backgroundcolor="orange-bg"] {
   background-color: #d76d25 !important;
 }
 /* @@ Style for All themefont */
@@ -1212,7 +1210,6 @@ section[data-font="raleway"] textarea {
 @media screen and (max-width: 1440px) {
   .slick #slider .plan-container {
     margin: 5px auto;
-    max-width: 400px;
     padding: 0px 10px;
   }
 }
@@ -1220,29 +1217,29 @@ section[data-font="raleway"] textarea {
   .col-md-12 {
     margin-bottom: -20px;
   }
-  .tab-content > .active, .tabs-item.active{
+  .tab-content > .active,
+  .tabs-item.active {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 15px;
   }
-  .slick #slider .plan-container{
+  .slick #slider .plan-container {
     width: 300px;
-    display: block;
     margin: 10px;
   }
-  .slick #slider .plan-container .svg{
+  .slick #slider .plan-container .svg {
     width: 150px;
     height: 150px;
     position: relative;
     top: 0;
     right: 5%;
   }
-  .slick #slider .plan-container .wrapper{
+  .slick #slider .plan-container .wrapper {
     width: 300px;
     height: min-content;
   }
-  .tabs-content{
+  .tabs-content {
     margin-top: 0px;
   }
   .btn-group {
@@ -1284,17 +1281,16 @@ section[data-font="raleway"] textarea {
 @media (min-width: 767px) and (max-width: 991px) {
   section#radioplans {
     display: list-item;
-    
   }
   .plan-container-wrapper {
     display: block;
-}
-  .slick #slider .plan-container{
+  }
+  .slick #slider .plan-container {
     width: 300px;
     display: block;
     margin: 10px;
   }
-  .slick #slider .plan-container .svg{
+  .slick #slider .plan-container .svg {
     width: 200px;
     height: 150px;
     position: relative;
@@ -1304,13 +1300,13 @@ section[data-font="raleway"] textarea {
   .slick #slider .plan-container .wrapper {
     width: fit-content;
     height: auto;
-    }
-    .tabs-content{
-      margin-top: 0px;
-    }
+  }
+  .tabs-content {
+    margin-top: 0px;
+  }
   .tabs-header {
     overflow-x: visible;
-    margin-left: 15px;
+    margin-left: 0px;
     position: relative;
     display: inline-block;
     vertical-align: middle;
@@ -1318,7 +1314,6 @@ section[data-font="raleway"] textarea {
     flex-wrap: wrap;
     justify-content: center;
   }
-
   .row .tabs-content {
     position: relative;
     display: inline-block;
@@ -1327,7 +1322,6 @@ section[data-font="raleway"] textarea {
     flex-wrap: wrap;
     justify-content: center;
   }
-
   .col-md-12.text-center {
     position: relative;
     display: inline-block;
@@ -1343,12 +1337,10 @@ section[data-font="raleway"] textarea {
     flex-wrap: wrap;
     justify-content: center;
   }
-
   .slick #slider .plan-container .wrapper .list-info {
     margin: 0.5px;
     padding: 0px;
   }
-
   li {
     margin: 10px;
   }
@@ -1357,7 +1349,8 @@ section[data-font="raleway"] textarea {
   .plan-container-wrapper {
     display: block;
   }
-  .tab-content > .active, .tabs-item.active{
+  .tab-content > .active,
+  .tabs-item.active {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -1365,12 +1358,12 @@ section[data-font="raleway"] textarea {
     flex-direction: column;
     flex-wrap: nowrap;
   }
-  .slick #slider .plan-container{
-    width: 400px;
+  .slick #slider .plan-container {
+    width: 600px;
     display: flex;
     margin: 10px;
   }
-  .slick #slider .plan-container .svg{
+  .slick #slider .plan-container .svg {
     width: 150px;
     height: 150px;
     position: relative;
@@ -1380,7 +1373,7 @@ section[data-font="raleway"] textarea {
   .slick #slider .plan-container .wrapper {
     width: fit-content;
     height: auto;
-    }
+  }
   .row {
     width: min-content;
     justify-content: center;
@@ -1408,7 +1401,7 @@ section[data-font="raleway"] textarea {
     padding: 20px 30px 20px 30px;
   }
   .slick #slider .plan-container .list-info li {
-    padding: 0px; 
+    padding: 0px;
   }
 }
 @media (min-width: 424px) and (max-width: 767px) {
@@ -1418,12 +1411,12 @@ section[data-font="raleway"] textarea {
   .col-md-12 {
     margin-bottom: -20px;
     margin-left: 40px;
-}
+  }
   .slick #slider .plan-container {
     width: 400px;
     display: block;
     margin: 10px;
-}
+  }
   .tabs-header {
     overflow-x: visible;
     margin-left: 20px;
@@ -1436,7 +1429,7 @@ section[data-font="raleway"] textarea {
   }
   .tabs-content {
     margin-left: -10px;
-}
+  }
   .row .tabs-content {
     position: relative;
     display: inline-block;
@@ -1456,7 +1449,7 @@ section[data-font="raleway"] textarea {
     padding: 0px;
   }
   .slick #slider .plan-container .list-info li {
-    padding: 10px 0px; 
+    padding: 10px 0px;
   }
 }
 
@@ -1468,11 +1461,11 @@ section[data-font="raleway"] textarea {
     width: 380px;
     display: block;
     margin: 0;
-}
-.col-md-12{
- margin: 0;
-}
- .row .tabs-content {
+  }
+  .col-md-12 {
+    margin: 0;
+  }
+  .row .tabs-content {
     position: relative;
     display: inline-block;
     vertical-align: middle;
@@ -1492,8 +1485,8 @@ section[data-font="raleway"] textarea {
   .slick #slider .plan-container {
     width: 350px;
     display: block;
-}
- .row .tabs-content {
+  }
+  .row .tabs-content {
     position: relative;
     display: inline-block;
     vertical-align: middle;
@@ -1506,7 +1499,7 @@ section[data-font="raleway"] textarea {
     padding: 8px;
   }
   .slick #slider .plan-container .list-info li {
-    padding: 10px 0px; 
+    padding: 10px 0px;
   }
 }
 @media screen and (max-width: 320px) {
@@ -1517,8 +1510,8 @@ section[data-font="raleway"] textarea {
     width: 300px;
     display: block;
     margin: 0;
-}
- .row .tabs-content {
+  }
+  .row .tabs-content {
     position: relative;
     display: inline-block;
     vertical-align: middle;
