--- a/Index7/css7/main-style7.css
+++ b/Index7/css7/main-style7.css
@@ -206,10 +206,14 @@ a.plans.badge.feat:hover {
   color: #000 !important;
   background-color: #fdd700 !important;
   border-color: #fdd700 !important;
+  border-top-right-radius: 12px;
+  border-bottom-right-radius: 12px;
 }
 .btn-group > .btn:not(:last-child):not(.dropdown-toggle) {
   font-size: 15px;
   color: #4c4a4a;
+  border-top-right-radius: 12px;
+  border-bottom-right-radius: 12px;
 }
 .btn-group > .btn:not(:last-child):not(.dropdown-toggle).btn:hover {
   background-color: #fdd700;
