--- a/Index9/css9/main-style9.css
+++ b/Index9/css9/main-style9.css
@@ -236,7 +236,7 @@ a.plans.badge.feat:hover {
   opacity: 0.8;
   border-radius: 13px;
   background-color: #ffffff;
-  border: 1px solid #d6d6d6;
+  border: 0.5px solid #ffffff;
 }
 .btn-group > .btn:not(:first-child) {
   font-size: 15px;
@@ -784,7 +784,7 @@ section[data-font="raleway"] textarea {
     top: 0;
   }
   .slick #slider .plan-container .wrapper {
-    width: 300px;
+    /* width: 300px; */
     height: min-content;
   }
   .tabs-content {
@@ -950,8 +950,11 @@ section[data-font="raleway"] textarea {
   .row {
     flex-direction: column;
   }
+  .slick #slider .plan-container {
+    width: 400px;
+  }
   .slick #slider .plan-container .wrapper {
-    width: 380px;
+    /* width: 380px; */
     margin: 0px;
   }
   .row .tabs-content {
@@ -977,8 +980,10 @@ section[data-font="raleway"] textarea {
     align-items: center;
     justify-content: center;
   }
+  .slick #slider .plan-container {
+    width: 350px;
+  }
   .slick #slider .plan-container .wrapper {
-    width: 300px;
     margin-bottom: 20px;
   }
   .slick #slider .plan-container .wrapper .list-info {
